@@ -50,13 +50,13 @@
 #-- Show current chapter number in addition to the current playlist position.
 #-- Can be useful also for audio files with internal chapters having a song
 #-- per chapter.
-#show_current_chapter_number=no
+#show_chapternumber=no
 
 #-- Show album's current track number (if not equal to the current playlist
 #-- position); Playlists can be long, traversing multiple directories.
 #-- This will show the album's current track number in addition
 #-- to the (encompassing) playlist position (if present in metadata).
-#show_current_albumtrack_number=no
+#show_albumtracknumber=no
 
 #osd_message_maxlength=96
 
